# Kore-Framework

./: .gitignore  README.md  install.sh  uninstall.sh
plans/: refactor.md
scripts/: cleanup_non_oracle_assistant_state.py  init_models.py  install.py  sync.py  verify.py  watch_sync.py
server/: .gitignore  README.md  eval_jina_stack.py  eval_semantic_quality.py  install.sh  pyproject.toml  setup.sh
server/docs/: claude-user-mcp.example.json
server/src/abstract_engine/: __init__.py  call_graph.py  generic_extractor.py  index.py  lang_config.py  models.py  parser.py  py_utils.py  renderer.py  tree_sitter_parser.py
server/src/abstract_engine/lang/: __init__.py  python.py
server/src/abstract_fs_server/: __init__.py  config.py  file_watcher.py  lock_manager.py  path_filter.py  registry.py  repo_paths.py  semantic_index.py  server.py
server/src/abstract_fs_server/adapter/: __init__.py  _helpers.py  are_adapter.py  search_engine.py  tracer.py  view_generator.py
server/src/abstract_fs_server/tools/: __init__.py  search_tools.py
server/tests/: test_repo_paths.py
server/tests/abstract_engine/: conftest.py  test_call_graph.py  test_index.py  test_models.py  test_python_parser.py  test_renderer.py
source/claude/: CLAUDE.md
source/claude/agents/: a-research-operative.md  a-verification-operative.md  b-scout.md  b-verifier.md  bug-identifier-agent.md  d-advisor.md  d-apex.md  d-raptor.md  d-recon.md  d-researcher.md  d-vector.md  executor-manager.md  researcher-agent.md  reviewer-agent.md  (+9 more)
source/runtime/: abstract-fs.service.template  semantic-mcp.json
(+15 files in other folders)
